# Face-Recognition

./: .gitignore  LICENSE  README.md  face_recognition_using_PCA.html  index.html  index.md  notebooks.html  pyproject.toml  requirements.txt  styles.css
PCA/: README.md  test.py  train.py  utils.py
analysis/: README.md  face_recognition_using_PCA.ipynb
web_app/: README.md  landing_page.py
web_app/.streamlit/: config.toml
web_app/assets/models/pca/: metrics.py  pca.pkl
web_app/pages/: pca.py
