[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition"
version = "0.4.1"
description = "Face Recognition Projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]

[tool.setuptools]
py-modules = ["utils"]

[tool.uv]
link-mode = "copy"